# AI-Telemarketer

./: .gitignore  FRONTEND_FIXES.md  PRD.md  PROJECT_ANALYSIS.md  RUN_INSTRUCTIONS.md  audio_test.py  dev_plan.md  direct_mic_test.py  pyproject.toml  save_and_play_audio.py  simple_audio_test.py  stt_unit_test.py  telemarketer_calls.db-shm  telemarketer_calls.db-wal  test_xtts_standalone.py  tts_playback_test.py  uk_regulator.db-shm  uk_regulator.db-wal
frontend/: README.md
frontend/AI Telemarketer/: .env.example  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/AI Telemarketer/src/: App.tsx  main.tsx
telemarketerv2/: REALTIME_FEATURES.md  SETUP_UBUNTU.md  call_logs.txt  requirements.txt  run.sh  test_cloned_voice.py  test_env.py
telemarketerv2/app/: README_DIALER.md  README_UK_REGULATIONS.md  automated_response_detector.py  conversation_manager.py  debug_script.py  dialer_system.py  llm_handler.py  main.py  mock_tps.csv  prompt_templates.py  structured_script.py  stt_handler.py  test_lead_capture.py  tts_handler.py  uk_call_regulations.py  uk_regulations_integration.py  utils.py  vad_handler.py  voice_cloning_handler.py
telemarketerv2/app/database/: connection.py  models.py
telemarketerv2/app/deprecated/: api.py  call_manager.py  call_state_manager.py  dialer_api.py  script_parser.py  script_selector.py  stt_callback_handler.py  stt_callback_handler_v2.py  test_call_state.py  test_dialer_system.py  twilio_integration.py  websocket_manager.py
telemarketerv2/data/: prompts.json
(+20 files in other folders)
